--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <body>
 
-    <div class="container">
+    <!-- <div class="container">
             <div class='inner-box'></div>
             <div class='fps-container'>
                 <div class='fps-counter' id="fps-counter"></div>
             </div>
         <canvas id='videoElement' class="output_canvas" width="1280px" height="720px"></canvas>
         <video class="input_video"></video>
-    </div>
+    </div> -->
 
     <script src="index.js"></script>
 
